force-app/main/default/objects/Asset/fields/Asset_Status__c.field-meta.xml
<CustomField>
    <fullName>Asset_Status__c</fullName>
    <label>Asset Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Returned</fullName>
            </value>
            <value>
                <fullName>Under Maintenance</fullName>
            </value>
            <value>
                <fullName>Retired</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>