force-app/main/default/objects/Asset/fields/Linked_Contract__c.field-meta.xml
<CustomField>
    <fullName>Linked_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Linked Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Assets</relationshipLabel>
    <relationshipName>Assets</relationshipName>
    <type>Lookup</type>
</CustomField>